# chicken_ai

./: README.md  finger_angle.py  main.py  mutil_finger_angle.py  preview_data.html  pyproject.toml  realtime_gesture_recognition.py  save_data.py  train_classfier.py
